--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include README.md LICENSE
-recursive-include graphene_django/templates *
-recursive-include graphene_django/static *
+recursive-include graphene_neo4j/templates *
+recursive-include graphene_neo4j/static *
